Replace bin/compile-requirements with enhanced Python version
- Rewritten in Python
- Doesn't use tox
- Doesn't require the tox EXTRA_DEPS hack
- Doesn't require precreating empty requirements/*.txt files for tox
- Deletes unused requirements/pyXY subdirs

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,15 @@ install_requires =
 
 [options.packages.find]
 where = src
+
+[pycodestyle]
+ignore =
+    # Disable pycodestyle errors and warnings that we don't care about because
+    # Black formats our code for us.
+    E203,  # Whitespace before ':',
+    E231,  # Missing whitespace after ',',
+    E501,  # Line too long,
+    W503,  # Line break before binary operator,
+
+    # Bare except. PyLint finds these for us so we don't need pycodestyle to.
+    E722,
