--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = {py310,py39,py38}-tests
+envlist = py310-tests
+skipsdist = true
 minversion = 3.25.0
 requires =
   tox-pyenv
@@ -8,13 +9,15 @@ tox_pyenv_fallback = false
 isolated_build = true
 
 [testenv]
+skip_install = true
 recreate = true
-passenv =
-    CUSTOM_COMPILE_COMMAND  # For pip-compile.
+setenv =
+    PYTHONPATH = src
+    FLASK_APP = python_multiversion_dependency_management_demo.app
 deps =
-    coverage: -r requirements/py310/coverage.txt
-    {format,checkformatting}: -r requirements/py310/format.txt
     lint: -r requirements/py310/lint.txt
+    {format,checkformatting}: -r requirements/py310/format.txt
+    coverage: -r requirements/py310/coverage.txt
     py310-dev: -r requirements/py310/dev.txt
     py310-tests: -r requirements/py310/tests.txt
     py310-functests: -r requirements/py310/functests.txt
@@ -27,15 +30,16 @@ deps =
 depends =
     coverage: tests
 commands =
-    tests: coverage run -m pytest -v {posargs:tests/unit/}
-    functests: pytest {posargs:tests/functional/}
-    coverage: -coverage combine
-    coverage: coverage report
+    dev: flask run --port 5482
     lint: pylint src bin
-    lint: pylint tests
+    lint: pylint --rcfile=tests/pyproject.toml tests
     lint: pydocstyle src tests bin
     lint: pycodestyle src tests bin
     format: black src tests bin
     format: isort --quiet --atomic src tests bin
     checkformatting: black --check src tests bin
     checkformatting: isort --quiet --check-only src tests bin
+    tests: coverage run -m pytest -v {posargs:tests/unit/}
+    functests: pytest {posargs:tests/functional/}
+    coverage: -coverage combine
+    coverage: coverage report
