--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
 envlist = py310-tests
-skipsdist = true
 minversion = 3.25.0
 requires =
   tox-pyenv
@@ -9,10 +8,10 @@ tox_pyenv_fallback = false
 isolated_build = true
 
 [testenv]
-skip_install = true
 recreate = true
+skip_install =
+    {format,checkformatting,coverage}: true
 setenv =
-    PYTHONPATH = src
     FLASK_APP = python_multiversion_dependency_management_demo.app
 deps =
     lint: -r requirements/py310/lint.txt
@@ -27,8 +26,6 @@ deps =
     py38-dev: -r requirements/py38/dev.txt
     py38-tests: -r requirements/py38/tests.txt
     py38-functests: -r requirements/py38/functests.txt
-depends =
-    coverage: tests
 commands =
     dev: flask run --port 5482
     lint: pylint src bin
@@ -41,5 +38,5 @@ commands =
     checkformatting: isort --quiet --check-only src tests bin
     tests: coverage run -m pytest -v {posargs:tests/unit/}
     functests: pytest {posargs:tests/functional/}
-    coverage: -coverage combine
+    coverage: coverage combine
     coverage: coverage report
