--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,16 @@
 name: Format, lint & test
-on: [push]
+on: [push,workflow_dispatch]
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
-    env:
-      TOX_PARALLEL_NO_SPINNER: 1
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Python ${{ matrix.python-version }}
+      - name: Setup Python 3.8
         uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: "pip"
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
-      - name: Install tox
-        run: python -m pip install tox
-      - name: Run tox
-        run: tox --parallel -e checkformatting,lint,tests,coverage
+          python-version: 3.8
+      - run: python3.8 --version
