--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,8 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3.8
-      - run: python3.8 --version
+      - name: Setup Python 3.9
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.9
+      - run: python3.9 --version
