--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,13 +7,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.9
+          python-version: "3.9"
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.8
+          python-version: "3.8"
       - run: python --version
       - run: python3 --version
       - run: python3.10 --version
