wip: GitHub Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,15 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
-      - uses: actions/setup-python@v3
-        with:
-          python-version: "3.9"
-      - uses: actions/setup-python@v3
+      - name: Install Python 3.8
+        uses: actions/setup-python@v3
         with:
           python-version: "3.8"
+      - name: Install Python 3.9
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.9"
+      - name: Install Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
       - run: python --version
       - run: python3 --version
       - run: python3.10 --version
