--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,4 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - run: python --version
-      - run: python3 --version
-      - run: python3.10 --version
-      - run: python3.9 --version
-      - run: python3.8 --version
+      - run: make sure
