--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,4 +17,5 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - run: make sure
+      - run: tox --parallel -e checkformatting,lint,py310-tests,py310-functests
+      - run: tox -e py39-tests,py38-tests,coverage,py39-functests,py38-functests
