--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,6 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
+      - run: run: python -m pip install tox
       - run: tox --parallel -e checkformatting,lint,py310-tests,py310-functests
       - run: tox -e py39-tests,py38-tests,coverage,py39-functests,py38-functests
