--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,8 @@ deps =
     py38-dev: -r requirements/py38/dev.txt
     py38-tests: -r requirements/py38/tests.txt
     py38-functests: -r requirements/py38/functests.txt
+depends =
+    coverage: {py310,py39,py38}-tests
 commands =
     dev: flask run --port 5482
     lint: pylint src bin
