--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,4 @@ jobs:
         with:
           python-version: "3.10"
       - run: python -m pip install tox
-      - run: tox --parallel -e checkformatting,lint,py310-tests,py310-functests
-      - run: tox -e py39-tests,py38-tests,coverage,py39-functests,py38-functests
+      - run: tox --parallel -e 'checkformatting,lint,{py310,py39,py38}-tests,coverage,{py310,py39,py38}-functests'
