--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           python-version: "3.10"
       - run: python -m pip install tox
-      - run: tox --parallel -e 'checkformatting,lint,{py310,py39,py38}-tests,coverage,{py310,py39,py38}-functests'
+      - run: tox --parallel -e 'checkformatting,lint,py{310,39,38}-tests,coverage,py{310,39,38}-functests'
