--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,5 +19,11 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements/**/*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - run: python -m pip install tox
       - run: tox --parallel -e 'checkformatting,lint,py{310,39,38}-tests,coverage,py{310,39,38}-functests'
