--- a/tox.ini
+++ b/tox.ini
@@ -5,28 +5,29 @@ requires =
   tox-run-command
 tox_pyenv_fallback = false
 isolated_build = true
+skipsdist = true
 
 [testenv]
-recreate = true
-skip_install =
-    {format,checkformatting,coverage}: true
 setenv =
+    PYTHONPATH = src
     FLASK_APP = python_multiversion_dependency_management_demo.app
-deps =
-    lint: -r requirements/py310/lint.txt
-    {format,checkformatting}: -r requirements/py310/format.txt
-    coverage: -r requirements/py310/coverage.txt
-    py310-dev: -r requirements/py310/dev.txt
-    py310-tests: -r requirements/py310/tests.txt
-    py310-functests: -r requirements/py310/functests.txt
-    py39-dev: -r requirements/py39/dev.txt
-    py39-tests: -r requirements/py39/tests.txt
-    py39-functests: -r requirements/py39/functests.txt
-    py38-dev: -r requirements/py38/dev.txt
-    py38-tests: -r requirements/py38/tests.txt
-    py38-functests: -r requirements/py38/functests.txt
 depends =
     coverage: {py310,py39,py38}-tests
+deps =
+    pip-tools
+commands_pre =
+    lint: pip-sync --pip-args '--disable-pip-version-check' requirements/py310/lint.txt
+    {format,checkformatting}: pip-sync --pip-args '--disable-pip-version-check' requirements/py310/format.txt
+    coverage: pip-sync --pip-args '--disable-pip-version-check' requirements/py310/coverage.txt
+    py310-dev: pip-sync --pip-args '--disable-pip-version-check' requirements/py310/dev.txt
+    py310-tests: pip-sync --pip-args '--disable-pip-version-check' requirements/py310/tests.txt
+    py310-functests: pip-sync --pip-args '--disable-pip-version-check' requirements/py310/functests.txt
+    py39-dev: pip-sync --pip-args '--disable-pip-version-check' requirements/py39/dev.txt
+    py39-tests: pip-sync --pip-args '--disable-pip-version-check' requirements/py39/tests.txt
+    py39-functests: pip-sync --pip-args '--disable-pip-version-check' requirements/py39/functests.txt
+    py38-dev: pip-sync --pip-args '--disable-pip-version-check' requirements/py38/dev.txt
+    py38-tests: pip-sync --pip-args '--disable-pip-version-check' requirements/py38/tests.txt
+    py38-functests: pip-sync --pip-args '--disable-pip-version-check' requirements/py38/functests.txt
 commands =
     dev: flask run --port 5482
     lint: pylint src bin
